theme.json update and added scss support.

--- a/assets/blocks/core/buttons.css
+++ b/assets/blocks/core/buttons.css
@@ -1,100 +1,1 @@
-/* Button
------------------------------------------------------------------------------ */
-
-/* Block Style: Filled
---------------------------------------------- */
-.wp-block-button:not(.is-style-outline) .wp-block-button__link:hover,
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-primary-background-color:hover {
-    background-color: var(--wp--preset--color--primary-light) !important;
-}
-
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-secondary-background-color:hover {
-    background-color: var(--wp--preset--color--secondary-light) !important;
-}
-
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-tertiary-background-color:hover {
-    background-color: var(--wp--preset--color--tertiary-light) !important;
-}
-
-/*
- * Accent, info, and warning colors do not have light variants, so just use
- * opacity.
- */
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-accent-background-color:hover {
-    background-color: var(--wp--preset--color--accent) !important;
-    opacity: 0.8;
-}
-
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-info-background-color:hover {
-    background-color: var(--wp--preset--color--info) !important;
-    opacity: 0.8;
-}
-
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-warning-background-color:hover {
-    background-color: var(--wp--preset--color--warning) !important;
-    opacity: 0.8;
-}
-
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-warning-background-color:hover {
-    background-color: var(--wp--preset--color--warning) !important;
-    opacity: 0.8;
-}
-
-.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-neutral-background-color:hover {
-    background-color: var(--wp--preset--color--neutral-300) !important;
-}
-
-
-/* Block Style: Outline
---------------------------------------------- */
-
-/*
- * This forces buttons with outline styling to inherit the color of the button.
- * This is needed due to our button styling in theme.json.
- */
-.wp-block-button.is-style-outline .wp-block-button__link {
-    border-color: inherit;
-}
-
-.wp-block-button.is-style-outline .wp-block-button__link:hover,
-.wp-block-button.is-style-outline .wp-block-button__link.has-primary-color:hover {
-    background-color: var(--wp--preset--color--primary) !important;
-    border-color: var(--wp--preset--color--primary);
-    color: var(--wp--preset--color--neutral) !important;
-}
-
-.wp-block-button.is-style-outline .wp-block-button__link.has-secondary-color:hover {
-    background-color: var(--wp--preset--color--secondary) !important;
-    border-color: var(--wp--preset--color--secondary);
-    color: var(--wp--preset--color--neutral) !important;
-}
-
-.wp-block-button.is-style-outline .wp-block-button__link.has-tertiary-color:hover {
-    background-color: var(--wp--preset--color--tertiary) !important;
-    border-color: var(--wp--preset--color--tertiary);
-    color: var(--wp--preset--color--neutral) !important;
-}
-
-.wp-block-button.is-style-outline .wp-block-button__link.has-accent-color:hover {
-    background-color: var(--wp--preset--color--accent) !important;
-    border-color: var(--wp--preset--color--accent);
-    color: var(--wp--preset--color--neutral) !important;
-}
-
-.wp-block-button.is-style-outline .wp-block-button__link.has-info-color:hover {
-    background-color: var(--wp--preset--color--info) !important;
-    border-color: var(--wp--preset--color--info);
-    color: var(--wp--preset--color--neutral) !important;
-}
-
-.wp-block-button.is-style-outline .wp-block-button__link.has-warning-color:hover {
-    background-color: var(--wp--preset--color--warning) !important;
-    border-color: var(--wp--preset--color--warning);
-    color: var(--wp--preset--color--neutral) !important;
-}
-
-.wp-block-button.is-style-outline .wp-block-button__link.has-neutral-color:hover {
-    background-color: var(--wp--preset--color--neutral) !important;
-    border-color: var(--wp--preset--color--neutral);
-    color: var(--wp--preset--color--primary) !important;
-}
+.wp-block-button:not(.is-style-outline) .wp-block-button__link:hover,.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-primary-background-color:hover{background-color:var(--wp--preset--color--primary-light) !important}.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-secondary-background-color:hover{background-color:var(--wp--preset--color--secondary-light) !important}.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-tertiary-background-color:hover{background-color:var(--wp--preset--color--tertiary-light) !important}.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-accent-background-color:hover{background-color:var(--wp--preset--color--accent) !important;opacity:.8}.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-info-background-color:hover{background-color:var(--wp--preset--color--info) !important;opacity:.8}.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-warning-background-color:hover{background-color:var(--wp--preset--color--warning) !important;opacity:.8}.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-warning-background-color:hover{background-color:var(--wp--preset--color--warning) !important;opacity:.8}.wp-block-button:not(.is-style-outline) .wp-block-button__link.has-neutral-background-color:hover{background-color:var(--wp--preset--color--neutral-300) !important}.wp-block-button.is-style-outline .wp-block-button__link{border-color:inherit}.wp-block-button.is-style-outline .wp-block-button__link:hover,.wp-block-button.is-style-outline .wp-block-button__link.has-primary-color:hover{background-color:var(--wp--preset--color--primary) !important;border-color:var(--wp--preset--color--primary);color:var(--wp--preset--color--neutral) !important}.wp-block-button.is-style-outline .wp-block-button__link.has-secondary-color:hover{background-color:var(--wp--preset--color--secondary) !important;border-color:var(--wp--preset--color--secondary);color:var(--wp--preset--color--neutral) !important}.wp-block-button.is-style-outline .wp-block-button__link.has-tertiary-color:hover{background-color:var(--wp--preset--color--tertiary) !important;border-color:var(--wp--preset--color--tertiary);color:var(--wp--preset--color--neutral) !important}.wp-block-button.is-style-outline .wp-block-button__link.has-accent-color:hover{background-color:var(--wp--preset--color--accent) !important;border-color:var(--wp--preset--color--accent);color:var(--wp--preset--color--neutral) !important}.wp-block-button.is-style-outline .wp-block-button__link.has-info-color:hover{background-color:var(--wp--preset--color--info) !important;border-color:var(--wp--preset--color--info);color:var(--wp--preset--color--neutral) !important}.wp-block-button.is-style-outline .wp-block-button__link.has-warning-color:hover{background-color:var(--wp--preset--color--warning) !important;border-color:var(--wp--preset--color--warning);color:var(--wp--preset--color--neutral) !important}.wp-block-button.is-style-outline .wp-block-button__link.has-neutral-color:hover{background-color:var(--wp--preset--color--neutral) !important;border-color:var(--wp--preset--color--neutral);color:var(--wp--preset--color--primary) !important}
