--- a/assets/blocks/core/gallery.css
+++ b/assets/blocks/core/gallery.css
@@ -1,61 +1,1 @@
-/* Gallery
------------------------------------------------------------------------------ */
-
-/* General Styles
---------------------------------------------- */
-
-.wp-block-gallery .blocks-gallery-item:last-child {
-    margin-bottom: 0;
-}
-
-@media ( min-width: 800px ) {
-    .wp-block-post-content > .wp-block-gallery {
-        margin-top: calc(2 * var(--wp--style--block-gap));
-        margin-bottom: calc(2 * var(--wp--style--block-gap));
-    }
-}
-
-.wp-block-gallery > figcaption {
-    color: var(--wp--preset--color--primary-light);
-    font-size: var(--wp--preset--font-size--small);
-}
-
-/* Block Style: Caption right/left
---------------------------------------------- */
-/* @media (min-width: 1350px) {
-    .is-style-caption-left,
-    .is-style-caption-right {
-        position: relative;
-    }
-
-    .is-style-caption-left > figcaption,
-    .is-style-caption-right > figcaption {
-        bottom: var(--wp--style--block-gap);
-        max-width: 14rem;
-        position: absolute;
-        width: 100%;
-    }
-
-    .is-style-caption-right > figcaption {
-        right: calc(-14rem - var(--wp--style--block-gap));
-        text-align: left;
-    }
-
-    .is-style-caption-left > figcaption {
-        left: calc(-14rem - var(--wp--style--block-gap));
-        text-align: right;
-    }
-
-    .alignfull.is-style-caption-right > figcaption,
-    .alignfull.is-style-caption-left > figcaption {
-        max-width: unset;
-        padding-left: var(--wp--style--block-gap);
-        padding-right: var(--wp--style--block-gap);
-        position: unset;
-        text-align: left;
-    }
-
-    .alignfull.is-style-caption-right > figcaption {
-        text-align: right;
-    }
-} */
+.wp-block-gallery .blocks-gallery-item:last-child{margin-bottom:0}@media(min-width: 800px){.wp-block-post-content>.wp-block-gallery{margin-top:calc(2*var(--wp--style--block-gap));margin-bottom:calc(2*var(--wp--style--block-gap))}}.wp-block-gallery>figcaption{color:var(--wp--preset--color--primary-light);font-size:var(--wp--preset--font-size--small)}
