--- a/assets/blocks/core/query.css
+++ b/assets/blocks/core/query.css
@@ -1,85 +1,1 @@
-/* Post Template
------------------------------------------------------------------------------ */
-
-/* General Styles
---------------------------------------------- */
-
-/*
- * Ensure post grids respect the theme blockGap setting.
- */
-.wp-block-query .wp-block-post-template.is-flex-container {
-    gap: var(--wp--style--block-gap);
-}
-
-@media (max-width: 781px) {
-    .wp-block-query .wp-block-post-template.is-flex-container > li {
-        flex-basis: 100%;
-    }
-}
-
-@media (min-width: 782px) {
-
-    .wp-block-query .wp-block-post-template.is-flex-container.columns-2 > li {
-        width: calc( 50% - 0.5 * var(--wp--style--block-gap) );
-    }
-
-    .wp-block-query .wp-block-post-template.is-flex-container.columns-3 > li {
-        width: calc( 33.333% - ( 2 * var(--wp--style--block-gap) ) / 3 );
-    }
-
-    .wp-block-query .wp-block-post-template.is-flex-container.columns-4 > li {
-        width: calc( 25% - ( 3 * var(--wp--style--block-gap) ) / 4 );
-    }
-
-    .wp-block-query .wp-block-post-template.is-flex-container.columns-5 > li {
-        width: calc( 20% - ( 4 * var(--wp--style--block-gap) ) / 5 );
-    }
-
-    .wp-block-query .wp-block-post-template.is-flex-container.columns-6 > li {
-        width: calc( 16.666% - ( 5 * var(--wp--style--block-gap) ) / 6 );
-    }
-}
-
-/*
- * If we are using a Group block to contain all post content in the Query loop
- * and we are using a grid layout, we want to ensure the Group blocks are all
- * same height, i.e. fill each column.
- */
-.wp-block-query .wp-block-post-template.is-flex-container li > .wp-block-group {
-    height: 100%;
-}
-
-/* Block Style: 2x Gap
---------------------------------------------- */
-
-@media (min-width: 782px) {
-
-    .wp-block-query.is-style-2x-gap .wp-block-post-template:not(.is-flex-container) > * + * {
-        margin-block-start: calc( 2 * var( --wp--style--block-gap ) );
-        margin-block-end: 0;
-    }
-
-    .wp-block-query.is-style-2x-gap .wp-block-post-template.is-flex-container {
-        gap: calc( 2 * var(--wp--style--block-gap) );
-    }
-
-    .wp-block-query.is-style-2x-gap .wp-block-post-template.is-flex-container.columns-2 > li {
-        width: calc( 50% - var(--wp--style--block-gap) );
-    }
-
-    .wp-block-query.is-style-2x-gap .wp-block-post-template.is-flex-container.columns-3 > li {
-        width: calc( 33.333% - ( 4 * var(--wp--style--block-gap) ) / 3 );
-    }
-
-    .wp-block-query.is-style-2x-gap .wp-block-post-template.is-flex-container.columns-4 > li {
-        width: calc( 25% - ( 6 * var(--wp--style--block-gap) ) / 4 );
-    }
-
-    .wp-block-query.is-style-2x-gap .wp-block-post-template.is-flex-container.columns-5 > li {
-        width: calc( 20% - ( 8 * var(--wp--style--block-gap) ) / 5 );
-    }
-
-    .wp-block-query.is-style-2x-gap .wp-block-post-template.is-flex-container.columns-6 > li {
-        width: calc( 16.666% - ( 10 * var(--wp--style--block-gap) ) / 6 );
-    }
-}
+.wp-block-query .wp-block-post-template.is-flex-container{gap:var(--wp--style--block-gap)}@media(max-width: 781px){.wp-block-query .wp-block-post-template.is-flex-container>li{flex-basis:100%}}@media(min-width: 782px){.wp-block-query .wp-block-post-template.is-flex-container.columns-2>li{width:calc(50% - .5*var(--wp--style--block-gap))}.wp-block-query .wp-block-post-template.is-flex-container.columns-3>li{width:calc(33.333% - 2*var(--wp--style--block-gap)/3)}.wp-block-query .wp-block-post-template.is-flex-container.columns-4>li{width:calc(25% - 3*var(--wp--style--block-gap)/4)}.wp-block-query .wp-block-post-template.is-flex-container.columns-5>li{width:calc(20% - 4*var(--wp--style--block-gap)/5)}.wp-block-query .wp-block-post-template.is-flex-container.columns-6>li{width:calc(16.666% - 5*var(--wp--style--block-gap)/6)}}.wp-block-query .wp-block-post-template.is-flex-container li>.wp-block-group{height:100%}@media(min-width: 782px){.wp-block-query.is-style-2x-gap .wp-block-post-template:not(.is-flex-container)>*+*{margin-block-start:calc(2*var(--wp--style--block-gap));margin-block-end:0}.wp-block-query.is-style-2x-gap .wp-block-post-template.is-flex-container{gap:calc(2*var(--wp--style--block-gap))}.wp-block-query.is-style-2x-gap .wp-block-post-template.is-flex-container.columns-2>li{width:calc(50% - var(--wp--style--block-gap))}.wp-block-query.is-style-2x-gap .wp-block-post-template.is-flex-container.columns-3>li{width:calc(33.333% - 4*var(--wp--style--block-gap)/3)}.wp-block-query.is-style-2x-gap .wp-block-post-template.is-flex-container.columns-4>li{width:calc(25% - 6*var(--wp--style--block-gap)/4)}.wp-block-query.is-style-2x-gap .wp-block-post-template.is-flex-container.columns-5>li{width:calc(20% - 8*var(--wp--style--block-gap)/5)}.wp-block-query.is-style-2x-gap .wp-block-post-template.is-flex-container.columns-6>li{width:calc(16.666% - 10*var(--wp--style--block-gap)/6)}}
