--- a/assets/blocks/core/search.css
+++ b/assets/blocks/core/search.css
@@ -1,9 +1,1 @@
-/* Separator
------------------------------------------------------------------------------ */
-
-/* General Styles
---------------------------------------------- */
-
-.wp-block-search button {
-    cursor: pointer;
-}
+.wp-block-search button{cursor:pointer}
