--- a/assets/blocks/core/site-title.css
+++ b/assets/blocks/core/site-title.css
@@ -1,9 +1,1 @@
-/* Site Title
------------------------------------------------------------------------------ */
-
-/* General Styles
---------------------------------------------- */
-
-.wp-block-site-title a {
-    text-decoration: none;
-}
+.wp-block-site-title a{text-decoration:none}
