--- a/assets/blocks/core/categories.css
+++ b/assets/blocks/core/categories.css
@@ -1,54 +1,1 @@
-/* Categories
------------------------------------------------------------------------------ */
-
-/* General Styles
---------------------------------------------- */
-.wp-block-categories.wp-block-categories-list,
-.wp-block-categories .wp-block-categories__list,
-.wp-block-categories.wp-block-categories-list li ul,
-.wp-block-categories .wp-block-categories__list li ul {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem 0.7rem;
-    padding: 0;
-}
-
-.wp-block-categories.wp-block-categories-list li,
-.wp-block-categories .wp-block-categories__list li {
-    /* Due to the fact that we cannot style the post count separately */
-    color: var(--wp--preset--color--neutral-500);
-    /* We have to manually set due to List block styling cascading into this block */
-    font-family: var(--wp--preset--font-family--primary);
-    list-style: none;
-    margin: 0;
-}
-
-.wp-block-categories.wp-block-categories-list li ul,
-.wp-block-categories .wp-block-categories__list li ul {
-    padding-left: 1rem;
-    margin: 0.5rem 0 0;
-}
-
-.wp-block-categories a {
-    text-decoration: none;
-}
-
-.wp-block-categories a:hover {
-    /* Due to the fact that we cannot style the post count separately */
-    color: var(--wp--preset--color--primary);
-    text-decoration: underline;
-}
-
-/* Block Style: Horizontal
---------------------------------------------- */
-.wp-block-categories.is-style-horizontal.wp-block-categories-list,
-.wp-block-categories.is-style-horizontal .wp-block-categories__list {
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-/* The "Show hierarchy" option is not supported with the Horizontal style. */
-.wp-block-categories.is-style-horizontal.wp-block-categories-list li ul,
-.wp-block-categories.is-style-horizontal .wp-block-categories__list li ul {
-    display: none;
-}
+.wp-block-categories.wp-block-categories-list,.wp-block-categories .wp-block-categories__list,.wp-block-categories.wp-block-categories-list li ul,.wp-block-categories .wp-block-categories__list li ul{display:flex;flex-direction:column;gap:.5rem .7rem;padding:0}.wp-block-categories.wp-block-categories-list li,.wp-block-categories .wp-block-categories__list li{color:var(--wp--preset--color--neutral-500);font-family:var(--wp--preset--font-family--primary);list-style:none;margin:0}.wp-block-categories.wp-block-categories-list li ul,.wp-block-categories .wp-block-categories__list li ul{padding-left:1rem;margin:.5rem 0 0}.wp-block-categories.is-style-horizontal.wp-block-categories-list,.wp-block-categories.is-style-horizontal .wp-block-categories__list{flex-direction:row;flex-wrap:wrap}.wp-block-categories.is-style-horizontal.wp-block-categories-list li ul,.wp-block-categories.is-style-horizontal .wp-block-categories__list li ul{display:none}
