--- a/assets/blocks/core/code.css
+++ b/assets/blocks/core/code.css
@@ -1,17 +1,1 @@
-/* Code
------------------------------------------------------------------------------ */
-
-/* General Styles
---------------------------------------------- */
-
-.wp-block-code {
-	border: none;
-	padding: 0;
-}
-
-.wp-block-code > code {
-	overflow-wrap: normal;
-	overflow-x: scroll;
-	tab-size: 4;
-	white-space: pre;
-}
+.wp-block-code>code{overflow-wrap:normal;overflow-x:scroll;tab-size:4;white-space:pre}
