--- a/assets/blocks/core/post-featured-image.css
+++ b/assets/blocks/core/post-featured-image.css
@@ -1,12 +1,1 @@
-/* Post Featured Image
------------------------------------------------------------------------------ */
-
-/* General Styles
---------------------------------------------- */
-
-/*
- * Temporary fix that allows the border radius set in theme.json to work.
- */
-.wp-block-post-featured-image {
-    overflow: hidden;
-}
+.wp-block-post-featured-image{overflow:hidden}
