--- a/src/blocks/core/separator.scss
+++ b/src/blocks/core/separator.scss
@@ -45,8 +45,8 @@
     display: block;
     height: 100%;
     width: 100%;
-    -webkit-mask-image: url( '../images/waves-2px.svg' );
-    mask-image: url( '../images/waves-2px.svg' );
+    -webkit-mask-image: url( '../../images/waves-2px.svg' );
+    mask-image: url( '../../images/waves-2px.svg' );
     -webkit-mask-position: center;
     mask-position: center;
     -webkit-mask-repeat: no-repeat;
