--- a/src/blocks/core/columns.scss
+++ b/src/blocks/core/columns.scss
@@ -4,6 +4,11 @@
 /* General Styles
 --------------------------------------------- */
 
+/* Columns blocks with border radius does not always work correctly, so fix let's that. */
+.wp-block-columns[style*="border-radius"] {
+    overflow: hidden;
+}
+
 /*
  * Remove the auto-padding added to columns blocks
  * with background colors applied.
