--- a/src/blocks/core/group.scss
+++ b/src/blocks/core/group.scss
@@ -24,6 +24,10 @@
  * This style is not directly accessible in the UI.
 --------------------------------------------- */
 
+.wp-block-group.is-style-hover-box {
+    box-shadow: var(--wp--custom--box-shadow--minimal);
+}
+
 @media (min-width: 600px) {
 
     .wp-block-group.is-style-hover-box {
@@ -63,6 +67,15 @@
 --------------------------------------------- */
 .wp-block-group.is-style-full-height-stack {
     height: 100%;
+    justify-content: space-between;
+
+    &> .wp-block-group {
+        width: 100%;
+    }
+} 
+
+.wp-block-group.is-style-80-vh-stack {
+    height: 100vh;
     justify-content: space-between;
 
     &> .wp-block-group {
